<resources>
    <string name="app_name">JMO</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loginDesc">Silahkan login untuk masuk aplikasi</string>
    <string name="login">Login</string>
    <string name="hintemail">Email Anda</string>
    <string name="hintpassword">Kata Sandi</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="lupa_akun">Lupa Akun?</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
</resources>